--- a/src/sections/Home/Home.scss
+++ b/src/sections/Home/Home.scss
@@ -152,7 +152,7 @@ body {
 .PricingCards {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-evenly;
+  justify-content: center;
   width: 100%;
 }
 
